# pia-personal-investor-advisor

./: .env.example  .gitignore  AGENTS.md  LICENSE  PROJECT_BIBLE.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  decision.yml  task.yml
.github/workflows/: pull-request-quality.yml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/migrations/: env.py  script.py.mako
apps/api/migrations/versions/: 20260713_01_initial_baseline.py  20260714_02_profiles_rls.py  20260714_03_audit_events.py  20260716_04_financial_ledger_rls.py  20260719_05_staged_imports_rls.py
apps/api/src/pia_api/: __init__.py  main.py
apps/api/src/pia_api/api/: health.py  identity.py  imports.py
apps/api/src/pia_api/core/: auth.py  config.py
apps/api/src/pia_api/domain/: __init__.py  financial_events.py
apps/api/src/pia_api/providers/: __init__.py  trade_republic_csv.py
apps/api/src/pia_api/services/: staged_imports.py
apps/api/tests/: financial_fixtures.py  test_auth.py  test_config.py  test_financial_events.py  test_financial_fixtures.py  test_health.py  test_imports.py  test_profile_rls.py  test_trade_republic_csv_parser.py  test_trade_republic_csv_v1_fixtures.py
apps/api/tests/fixtures/trade_republic_csv_v1/: accepted-observed.csv  expected-events.json  extension-phase3-test-only.csv
apps/api/tests/fixtures/trade_republic_csv_v1/malformed/: blank-transaction-id.csv  date-mismatch.csv  incomplete-fx-triple.csv  invalid-datetime.csv  invalid-decimal.csv  invalid-fee-tax-sign.csv  invalid-sign.csv  missing-security-identifier.csv  missing-shares.csv  reordered-header.csv  unknown-header.csv  unsupported-observed-types.csv
apps/web/: .env.example  README.md  package.json
apps/web/app/: layout.tsx  (+3 more)
docs/: project-management.md  supabase.md
docs/architecture/: system-overview.md
docs/decisions/: 0001-modular-monolith.md  0002-local-first-ai.md  0003-provider-adapters.md  0004-supabase-infrastructure-migrations.md  0005-canonical-financial-event-ledger.md
docs/imports/: trade-republic-csv-v1.md
scripts/: dev-api.sh  prepare-local-supabase-auth.sh
supabase/: .gitignore  config.toml
supabase/migrations/: 20260714000000_raw_imports_storage.sql
(+5 files in other folders)
